<resources>
    <string name="app_name">ContactOrganizer</string>
    <string name="txt_contact_name">Contact Name</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email">Email</string>
    <string name="txt_address">Address</string>
    <string name="txt_contact_creator">Contact Creator</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_add_contact">Add Contact</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_contact_list">Contact List</string>
    <string name="txt_delete_file">Delete file</string>
    <string name="txt_save_file">Save file</string>
    <string name="txt_exit">Exit</string>


</resources>
