<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/txt_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_file"
        android:title="@string/txt_save_file"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_file"
        android:title="@string/txt_delete_file"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/txt_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
